DASH-21 Alphabetized both files by key. Removed some unused properties from both files. Added missing properties to oracle.properties.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312842 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -1,84 +1,19 @@
 # MySQL SQL Statements
 
-create.table = create table if not exists PROJECT_THINGS (ID bigint(11) not null auto_increment primary key, TITLE varchar(255) not null)
-
-select.thing = select * from PROJECT_THINGS where ID=?
-
-select.things = select * from PROJECT_THINGS
-
-insert.thing = insert into PROJECT_THINGS (TITLE) values (?)
-
 create.CalendarItem.table = create table if not exists dash_calendar_item ( id bigint not null auto_increment, \
 calendar_time datetime not null, title varchar(255) not null, access_url varchar(1024) not null, \
 entity_ref varchar(300) not null, entity_type bigint not null, context_id bigint not null, primary key (id) ); \
 create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
 create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref)
 
-delete.CalendarItem.by.id = delete from dash_calendar_item where id=?
-
-insert.CalendarItem = insert into dash_calendar_item (calendar_time, title , access_url, entity_ref, entity_type, context_id) values (?, ?, ?, ?, ?, ?)
-
-select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
-ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
-st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
-site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_calendar_item ci join dash_context site on site.id=ci.context_id \
-join dash_sourcetype st on st.id=ci.entity_type where ci.id=?
-
-select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
-ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
-st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
-site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
-join dash_sourcetype st on st.id=ci.entity_type where ci.entity_ref=?
-
-select.CalendarItems.by.sakaiId.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
-ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
-st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
-site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_person user join dash_calendar_link link on user.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
-join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
-where user.sakai_id=? and site.context_id=? order by ci.calendar_time asc
-
-select.CalendarItems.by.sakaiId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
-ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
-st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
-site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_person user join dash_calendar_link link on user.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
-join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
-where user.sakai_id=? order by ci.calendar_time asc
-
-update.CalendarItem.calendarTime = update dash_calendar_item set calendar_time=? where id=?
-
-update.CalendarItem.title = update dash_calendar_item set title=? where id=?
-
-update.CalendarItem.title.calendarTime = update dash_calendar_item set title=?, calendar_time=? where id=?
-
-exists.CalendarItem.by.id = select * from dash_calendar_item where id=?
-
-exists.CalendarItem.by.entityReference = select * from dash_calendar_item where entity_ref=?
-
 create.CalendarLink.table = create table if not exists dash_calendar_link ( id bigint not null auto_increment, \
 person_id bigint not null, context_id bigint not null, item_id bigint not null, hidden bit default 0, \
 sticky bit default 0, unique (person_id, context_id, item_id), primary key (id) ); \
 create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky)
 
-delete.CalendarLinks.by.itemId = delete from dash_calendar_link where item_id=?
-
-insert.CalendarLink = insert into dash_calendar_link (person_id, item_id, context_id, hidden, sticky) values \
-(?, ?, ?, ?, ?)
-
 create.Context.table = create table if not exists dash_context ( id bigint not null auto_increment, context_id varchar(255) not null, \
 context_url varchar(1024) not null, context_title varchar(255) not null, primary key (id) ); \
 create unique index dash_context_idx on dash_context (context_id)
-
-insert.Context = insert into dash_context (context_id, context_url, context_title) values (?, ?, ?)
-
-select.Context.by.id = select site.id as site_id, site.context_id as site_context_id,  \
-site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.id=?
-
-select.Context.by.contextId = select site.id as site_id, site.context_id as site_context_id,  \
-site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.context_id=?
 
 create.NewsItem.table = create table if not exists dash_news_item ( id bigint not null auto_increment, news_time datetime not null, \
 title varchar(255) not null, access_url varchar(1024) not null, entity_ref varchar(300) not null, entity_type bigint not null, \
@@ -86,58 +21,85 @@ context_id bigint not null, primary key (id) ); \
 create index dash_news_time_idx on dash_news_item (news_time); \
 create unique index dash_news_entity_idx on dash_news_item (entity_ref)
 
-delete.NewsItem.by.id = delete from dash_news_item where id=?
-
-insert.NewsItem = insert into dash_news_item (news_time, title , access_url, entity_ref, entity_type, context_id) \
-values (?, ?, ?, ?, ?, ?)
-
-select.NewsItem.by.id = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
-ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
-st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
-site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_news_item ni join dash_context site on site.id=ni.context_id \
-join dash_sourcetype st on st.id=ni.entity_type where ni.id=?
-
-select.NewsItem.by.entityReference = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
-ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
-st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
-site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_news_item ni join dash_context site on site.id=ni.context_id \
-join dash_sourcetype st on st.id=ni.entity_type where ni.entity_ref=?
-
-select.NewsItems.by.sakaiId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
-ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
-st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
-site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_person user join dash_news_link link on user.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
-join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
-where user.sakai_id=? and site.context_id=? order by ni.news_time desc
-
-select.NewsItems.by.sakaiId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
-ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
-st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
-site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_person user join dash_news_link link on user.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
-join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
-where user.sakai_id=? order by ni.news_time desc
-
-update.NewsItem.title = update dash_news_item set title=? where id=?
-
 create.NewsLink.table = create table if not exists dash_news_link ( id bigint not null auto_increment, person_id bigint not null, \
 context_id bigint not null, item_id bigint not null, hidden bit default 0, sticky bit default 0, \
 unique (person_id, context_id, item_id), primary key (id) ); \
 create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky)
-
-delete.NewsLinks.by.itemId = delete from dash_news_link where item_id=?
-
-insert.NewsLink = insert into dash_news_link (person_id, item_id, context_id, hidden, sticky) values (?, ?, ?, ?, ?)
 
 create.Person.table = create table if not exists dash_person ( id bigint not null auto_increment,user_id varchar(99) not null,\
 sakai_id varchar(99), primary key (id) ); \
 create unique index dash_person_user_id_idx on dash_person (user_id); \
 create unique index dash_person_sakai_id_idx on dash_person (sakai_id)
 
+create.SourceType.table = create table if not exists dash_sourcetype ( id bigint not null auto_increment, identifier varchar(255) not null, \
+access_permission varchar(255), primary key (id) ); \
+create unique index dash_source_idx on dash_sourcetype (identifier)
+
+delete.CalendarItem.by.id = delete from dash_calendar_item where id=?
+
+delete.CalendarLinks.by.itemId = delete from dash_calendar_link where item_id=?
+
+delete.NewsItem.by.id = delete from dash_news_item where id=?
+
+delete.NewsLinks.by.itemId = delete from dash_news_link where item_id=?
+
+exists.CalendarItem.by.id = select * from dash_calendar_item where id=?
+
+exists.CalendarItem.by.entityReference = select * from dash_calendar_item where entity_ref=?
+
+insert.CalendarItem = insert into dash_calendar_item (calendar_time, title , access_url, entity_ref, entity_type, context_id) values (?, ?, ?, ?, ?, ?)
+
+insert.CalendarLink = insert into dash_calendar_link (person_id, item_id, context_id, hidden, sticky) values \
+(?, ?, ?, ?, ?)
+
+insert.Context = insert into dash_context (context_id, context_url, context_title) values (?, ?, ?)
+
+insert.NewsItem = insert into dash_news_item (news_time, title , access_url, entity_ref, entity_type, context_id) \
+values (?, ?, ?, ?, ?, ?)
+
+insert.NewsLink = insert into dash_news_link (person_id, item_id, context_id, hidden, sticky) values (?, ?, ?, ?, ?)
+
 insert.Person = insert into dash_person (user_id,sakai_id) values (?, ?)
+
+insert.SourceType = insert into dash_sourcetype (identifier, access_permission) values (?, ?)
+
+select.CalendarItems.by.sakaiId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
+ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_calendar_link link on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
+where usr.sakai_id=? order by ci.calendar_time asc
+
+select.CalendarItems.by.sakaiId.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
+ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_calendar_link link on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
+where usr.sakai_id=? and site.context_id=? order by ci.calendar_time asc
+
+select.Context.by.id = select site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.id=?
+
+select.Context.by.contextId = select site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.context_id=?
+
+select.NewsItems.by.sakaiId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_news_link link on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? order by ni.news_time desc
+
+select.NewsItems.by.sakaiId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_news_link link on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and site.context_id=? order by ni.news_time desc
 
 select.Person.by.id = select id, sakai_id, user_id from dash_person where id=?
 
@@ -145,15 +107,18 @@ select.Person.by.userId = select id, sakai_id, user_id from dash_person where us
 
 select.Person.by.sakaiId = select id, sakai_id, user_id from dash_person where sakai_id=?
 
-create.SourceType.table = create table if not exists dash_sourcetype ( id bigint not null auto_increment, identifier varchar(255) not null, \
-access_permission varchar(255), primary key (id) ); \
-create unique index dash_source_idx on dash_sourcetype (identifier)
-
-insert.SourceType = insert into dash_sourcetype (identifier, access_permission) values (?, ?)
-
 select.SourceType.by.id = select st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission \
 from dash_sourcetype st where id=?
 
 select.SourceType.by.identifier = select st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission \
 from dash_sourcetype st where identifier=?
+
+update.CalendarItem.calendarTime = update dash_calendar_item set calendar_time=? where id=?
+
+update.CalendarItem.title = update dash_calendar_item set title=? where id=?
+
+update.CalendarItem.title.calendarTime = update dash_calendar_item set title=?, calendar_time=? where id=?
+
+update.NewsItem.title = update dash_news_item set title=? where id=?
+
 
