--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -1,67 +1,78 @@
 # Oracle SQL Statements
 
-# Oracle needs a sequence to do the auto incrememnt, hence the additional statement
-create.table = create table if not exists PROJECT_THINGS (ID number(11) not null primary key, TITLE varchar2(255) not null); \
-create sequence PROJECT_THINGS_SEQ start with 0 increment by 1 nomaxvalue
-
-select.thing = select * from PROJECT_THINGS where ID=?
-
-select.things = select * from PROJECT_THINGS
-
-insert.thing = insert into PROJECT_THINGS (ID, TITLE) values (PROJECT_THINGS_SEQ.nextval, ?)
-
 create.CalendarItem.table = create table dash_calendar_item ( id number not null primary key, calendar_time timestamp(0) not null, title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, source_type number not null, context_id number not null ); \
 create sequence dash_calendar_item_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
 create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref)
 
-delete.CalendarItem.by.id = delete from dash_calendar_item where id=?
-
-insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, source_type, context_id) values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?)
-
-select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
-ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
-site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
-join dash_sourcetype st on st.id=ci.source_type where ci.id=?
-
-select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
-ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
-site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
-join dash_sourcetype st on st.id=ci.source_type where ci.entity_ref=?
-
-update.CalendarItem.calendarTime = update dash_calendar_item set calendar_time=? where id=?
-
-update.CalendarItem.title = update dash_calendar_item set title=? where id=?
-
-update.CalendarItem.title.calendarTime = update dash_calendar_item set title=?, calendar_time=? where id=?
-
-exists.CalendarItem.by.id = select * from dash_calendar_item where id=?
-
-exists.CalendarItem.by.entityReference = select * from dash_calendar_item where entity_ref=?
-
 create.CalendarLink.table = create table dash_calendar_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
 create sequence dash_calendar_link_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky)
-
-delete.CalendarLinks.by.itemId = delete from dash_calendar_link where item_id=?
-
-insert.CalendarLink = insert into dash_calendar_link (id, person_id, item_id, context_id, hidden, sticky) \
-values (dash_calendar_link_seq.nextval, ?, ?, ?, ?, ?)
-
-select.CalendarLinks.by.userId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
-ci.entity_ref as ci_entity_ref, site.id as site_id, site.context_id as site_context_id,  \
-site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_person user join dash_calendar_link link on user.id=link.person_id \
-join dash_calendar_item ci on ci.id=link.item_id join dash_context site on site.id=link.context_id  \
-where user.sakai_id=? order by ci.calendar_time asc
 
 create.Context.table = create table dash_context ( id number not null primary key, context_id varchar2(255) not null, context_url varchar2(1024) not null, context_title varchar2(255) not null ); \
 create sequence dash_context_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_context_idx on dash_context (context_id)
 
+create.NewsItem.table = create table dash_news_item ( id number not null primary key, news_time timestamp(0) not null, title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, entity_type number not null, context_id number not null ); \
+create sequence dash_news_item_seq start with 1 increment by 1 nomaxvalue; \
+create index dash_news_time_idx on dash_news_item (news_time); \
+create unique index dash_news_entity_idx on dash_news_item (entity_ref)
+
+create.NewsLink.table = create table dash_news_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
+create sequence dash_news_link_seq start with 1 increment by 1 nomaxvalue; \
+create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky)
+
+create.Person.table = create table dash_person ( id number not null primary key,user_id varchar2(99) not null,sakai_id varchar2(99) ); \
+create sequence dash_person_seq start with 1 increment by 1 nomaxvalue; \
+create unique index dash_person_user_id_idx on dash_person (user_id); \
+create unique index dash_person_sakai_id_idx on dash_person (sakai_id)
+
+create.SourceType.table = create table dash_sourcetype ( id number not null primary key, identifier varchar2(255) not null, access_permission varchar2(255) ); \
+create sequence dash_sourcetype_seq start with 1 increment by 1 nomaxvalue; \
+create unique index dash_source_idx on dash_sourcetype (identifier)
+
+delete.CalendarItem.by.id = delete from dash_calendar_item where id=?
+
+delete.CalendarLinks.by.itemId = delete from dash_calendar_link where item_id=?
+
+delete.NewsItem.by.id = delete from dash_news_item where id=?
+
+delete.NewsLinks.by.itemId = delete from dash_news_link where item_id=?
+
+exists.CalendarItem.by.id = select * from dash_calendar_item where id=?
+
+exists.CalendarItem.by.entityReference = select * from dash_calendar_item where entity_ref=?
+
+insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, source_type, context_id) values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?)
+
+insert.CalendarLink = insert into dash_calendar_link (id, person_id, item_id, context_id, hidden, sticky) \
+values (dash_calendar_link_seq.nextval, ?, ?, ?, ?, ?)
+
 insert.Context = insert into dash_context (id, context_id, context_url, context_title) values (dash_context_seq.nextval, ?, ?, ?)
+
+insert.NewsItem = insert into dash_news_item (id, news_time, title , access_url, entity_ref, source_type, context_id) values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?)
+
+insert.NewsLink = insert into dash_news_link (id, person_id, item_id, context_id, hidden, sticky ) values (dash_news_link_seq.nextval, ?, ?, ?, ?, ?)
+
+insert.Person = insert into dash_person (id,user_id,sakai_id) values (dash_person_seq.nextval, ?, ?)
+
+insert.SourceType = insert into dash_sourcetype ( id, identifier, access_permission) values (dash_sourcetype_seq.nextval, ?, ?)
+
+select.CalendarItems.by.sakaiId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
+ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_calendar_link link on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
+where usr.sakai_id=? order by ci.calendar_time asc
+
+select.CalendarItems.by.sakaiId.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
+ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_calendar_link link on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
+where usr.sakai_id=? and site.context_id=? order by ci.calendar_time asc
 
 select.Context.by.id = select site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.id=?
@@ -69,38 +80,21 @@ site.context_url as site_context_url, site.context_title as site_context_title f
 select.Context.by.contextId = select site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.context_id=?
 
-create.NewsItem.table = create table dash_news_item ( id number not null primary key, news_time timestamp(0) not null, title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, entity_type number not null, context_id number not null ); \
-create sequence dash_news_item_seq start with 1 increment by 1 nomaxvalue; \
-create index dash_news_time_idx on dash_news_item (news_time); \
-create unique index dash_news_entity_idx on dash_news_item (entity_ref)
-
-delete.NewsItem.by.id = delete from dash_news_item where id=?
-
-insert.NewsItem = insert into dash_news_item (id, news_time, title , access_url, entity_ref, source_type, context_id) values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?)
-
-update.NewsItem.title = update dash_news_item set title=? where id=?
-
-create.NewsLink.table = create table dash_news_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
-create sequence dash_news_link_seq start with 1 increment by 1 nomaxvalue; \
-create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky)
-
-delete.NewsLinks.by.itemId = delete from dash_news_link where item_id=?
-
-insert.NewsLink = insert into dash_news_link (id, person_id, item_id, context_id, hidden, sticky ) values (dash_news_link_seq.nextval, ?, ?, ?, ?, ?)
-
-select.NewsLinks.by.userId = select ci.id as ci_id, ci.news_time as ci_news_time, ci.title as ci_title, ci.access_url as ci_access_url, \
-ci.entity_ref as ci_entity_ref, site.id as site_id, site.context_id as site_context_id,  \
+select.NewsItems.by.sakaiId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_person user join dash_news_link link on user.id=link.person_id \
-join dash_news_item ci on ci.id=link.item_id join dash_context site on site.id=link.context_id  \
-where user.sakai_id=? order by ci.news_time desc
+from dash_person usr join dash_news_link link on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? order by ni.news_time desc
 
-create.Person.table = create table dash_person ( id number not null primary key,user_id varchar2(99) not null,sakai_id varchar2(99) ); \
-create sequence dash_person_seq start with 1 increment by 1 nomaxvalue; \
-create unique index dash_person_user_id_idx on dash_person (user_id); \
-create unique index dash_person_sakai_id_idx on dash_person (sakai_id)
-
-insert.Person = insert into dash_person (id,user_id,sakai_id) values (dash_person_seq.nextval, ?, ?)
+select.NewsItems.by.sakaiId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_news_link link on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and site.context_id=? order by ni.news_time desc
 
 select.Person.by.id = select * from dash_person where id=?
 
@@ -108,13 +102,15 @@ select.Person.by.userId = select * from dash_person where user_id=?
 
 select.Person.by.sakaiId = select * from dash_person where sakai_id=?
 
-create.SourceType.table = create table dash_sourcetype ( id number not null primary key, identifier varchar2(255) not null, access_permission varchar2(255) ); \
-create sequence dash_sourcetype_seq start with 1 increment by 1 nomaxvalue; \
-create unique index dash_source_idx on dash_sourcetype (identifier)
-
-insert.SourceType = insert into dash_sourcetype ( id, identifier, access_permission) values (dash_sourcetype_seq.nextval, ?, ?)
-
 select.SourceType.by.id = select st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission from dash_sourcetype st where id=?
 
 select.SourceType.by.identifier = select st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission from dash_sourcetype st where identifier=?
+
+update.CalendarItem.calendarTime = update dash_calendar_item set calendar_time=? where id=?
+
+update.CalendarItem.title = update dash_calendar_item set title=? where id=?
+
+update.CalendarItem.title.calendarTime = update dash_calendar_item set title=?, calendar_time=? where id=?
+
+update.NewsItem.title = update dash_news_item set title=? where id=?
 
