DASH-22 Implemented the new methods to remove calendar links and news links for a user in a particular site.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312844 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -35,10 +35,14 @@ delete.CalendarItem.by.id = delete from dash_calendar_item where id=?
 
 delete.CalendarLinks.by.itemId = delete from dash_calendar_link where item_id=?
 
+delete.CalendarLinks.by.person.context = delete from dash_calendar_link where person_id=? and context_id=?
+
 delete.NewsItem.by.id = delete from dash_news_item where id=?
 
 delete.NewsLinks.by.itemId = delete from dash_news_link where item_id=?
 
+delete.NewsLinks.by.person.context = delete from dash_news_link where person_id=? and context_id=?
+s
 exists.CalendarItem.by.id = select * from dash_calendar_item where id=?
 
 exists.CalendarItem.by.entityReference = select * from dash_calendar_item where entity_ref=?
