--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -39,9 +39,13 @@ delete.CalendarItem.by.id = delete from dash_calendar_item where id=?
 
 delete.CalendarLinks.by.itemId = delete from dash_calendar_link where item_id=?
 
+delete.CalendarLinks.by.person.context = delete from dash_calendar_link where person_id=? and context_id=?
+
 delete.NewsItem.by.id = delete from dash_news_item where id=?
 
 delete.NewsLinks.by.itemId = delete from dash_news_link where item_id=?
+
+delete.NewsLinks.by.person.context = delete from dash_news_link where person_id=? and context_id=?
 
 exists.CalendarItem.by.id = select * from dash_calendar_item where id=?
 
