--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -67,6 +67,18 @@ insert.Person = insert into dash_person (user_id,sakai_id) values (?, ?)
 
 insert.SourceType = insert into dash_sourcetype (identifier, access_permission) values (?, ?)
 
+select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
+ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
+join dash_sourcetype st on st.id=ci.source_type where ci.entity_ref=?
+
+select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
+ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
+join dash_sourcetype st on st.id=ci.source_type where ci.id=?
+
 select.CalendarItems.by.sakaiId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
 ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
@@ -88,6 +100,18 @@ site.context_url as site_context_url, site.context_title as site_context_title f
 
 select.Context.by.contextId = select site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.context_id=?
+
+select.NewsItem.by.entityReference = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.access_url as ni_access_url, \
+ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_news_item ni join dash_context site on site.id=ni.context_id  \
+join dash_sourcetype st on st.id=ni.source_type where ni.entity_ref=?
+
+select.NewsItem.by.id = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.access_url as ni_access_url, \
+ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_news_item ni join dash_context site on site.id=ni.context_id  \
+join dash_sourcetype st on st.id=ni.source_type where ni.id=?
 
 select.NewsItems.by.sakaiId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
 ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
