--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -1,6 +1,6 @@
 # Oracle SQL Statements
 
-create.CalendarItem.table = create table dash_calendar_item ( id number not null primary key, calendar_time timestamp(0) not null, title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, source_type number not null, context_id number not null ); \
+create.CalendarItem.table = create table dash_calendar_item ( id number not null primary key, calendar_time timestamp(0) not null, title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, entity_type number not null, context_id number not null ); \
 create sequence dash_calendar_item_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
 create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref)
@@ -47,14 +47,14 @@ exists.CalendarItem.by.id = select * from dash_calendar_item where id=?
 
 exists.CalendarItem.by.entityReference = select * from dash_calendar_item where entity_ref=?
 
-insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, source_type, context_id) values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?)
+insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, entity_type, context_id) values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?)
 
 insert.CalendarLink = insert into dash_calendar_link (id, person_id, item_id, context_id, hidden, sticky) \
 values (dash_calendar_link_seq.nextval, ?, ?, ?, ?, ?)
 
 insert.Context = insert into dash_context (id, context_id, context_url, context_title) values (dash_context_seq.nextval, ?, ?, ?)
 
-insert.NewsItem = insert into dash_news_item (id, news_time, title , access_url, entity_ref, source_type, context_id) values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?)
+insert.NewsItem = insert into dash_news_item (id, news_time, title , access_url, entity_ref, entity_type, context_id) values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?)
 
 insert.NewsLink = insert into dash_news_link (id, person_id, item_id, context_id, hidden, sticky ) values (dash_news_link_seq.nextval, ?, ?, ?, ?, ?)
 
@@ -66,13 +66,13 @@ select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time
 ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
-join dash_sourcetype st on st.id=ci.source_type where ci.entity_ref=?
+join dash_sourcetype st on st.id=ci.entity_type where ci.entity_ref=?
 
 select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
 ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
-join dash_sourcetype st on st.id=ci.source_type where ci.id=?
+join dash_sourcetype st on st.id=ci.entity_type where ci.id=?
 
 select.CalendarItems.by.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
 ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
@@ -107,13 +107,13 @@ select.NewsItem.by.entityReference = select ni.id as ni_id, ni.news_time as ni_n
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_news_item ni join dash_context site on site.id=ni.context_id  \
-join dash_sourcetype st on st.id=ni.source_type where ni.entity_ref=?
+join dash_sourcetype st on st.id=ni.entity_type where ni.entity_ref=?
 
 select.NewsItem.by.id = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.access_url as ni_access_url, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_news_item ni join dash_context site on site.id=ni.context_id  \
-join dash_sourcetype st on st.id=ni.source_type where ni.id=?
+join dash_sourcetype st on st.id=ni.entity_type where ni.id=?
 
 select.NewsItems.by.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
 ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
