--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -1,33 +1,48 @@
 # Oracle SQL Statements
 
-create.CalendarItem.table = create table dash_calendar_item ( id number not null primary key, calendar_time timestamp(0) not null, title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, entity_type number not null, context_id number not null ); \
+create.CalendarItem.table = create table dash_calendar_item \
+( id number not null primary key, calendar_time timestamp(0) not null, \
+title varchar2(255) not null, access_url varchar2(1024) not null, \
+entity_ref varchar2(300) not null, entity_type number not null, context_id number not null ); \
 create sequence dash_calendar_item_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
 create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref)
 
-create.CalendarLink.table = create table dash_calendar_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
+create.CalendarLink.table = create table dash_calendar_link \
+( id number not null primary key, person_id number not null, context_id number not null, \
+item_id number not null, hidden number(1,0) default 0, sticky number(1,0) default 0, \
+unique (person_id, context_id, item_id) ); \
 create sequence dash_calendar_link_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky)
 
-create.Context.table = create table dash_context ( id number not null primary key, context_id varchar2(255) not null, context_url varchar2(1024) not null, context_title varchar2(255) not null ); \
+create.Context.table = create table dash_context \
+( id number not null primary key, context_id varchar2(255) not null, \
+context_url varchar2(1024) not null, context_title varchar2(255) not null ); \
 create sequence dash_context_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_context_idx on dash_context (context_id)
 
-create.NewsItem.table = create table dash_news_item ( id number not null primary key, news_time timestamp(0) not null, title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, entity_type number not null, context_id number not null ); \
+create.NewsItem.table = create table dash_news_item ( id number not null primary key, \
+news_time timestamp(0) not null, title varchar2(255) not null, \
+access_url varchar2(1024) not null, entity_ref varchar2(300) not null, \
+entity_type number not null, context_id number not null ); \
 create sequence dash_news_item_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_news_time_idx on dash_news_item (news_time); \
 create unique index dash_news_entity_idx on dash_news_item (entity_ref)
 
-create.NewsLink.table = create table dash_news_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
+create.NewsLink.table = create table dash_news_link \
+( id number not null primary key, person_id number not null, context_id number not null, \
+item_id number not null, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
 create sequence dash_news_link_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky)
 
-create.Person.table = create table dash_person ( id number not null primary key,user_id varchar2(99) not null,sakai_id varchar2(99) ); \
+create.Person.table = create table dash_person \
+( id number not null primary key,user_id varchar2(99) not null,sakai_id varchar2(99) ); \
 create sequence dash_person_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_person_user_id_idx on dash_person (user_id); \
 create unique index dash_person_sakai_id_idx on dash_person (sakai_id)
 
-create.SourceType.table = create table dash_sourcetype ( id number not null primary key, identifier varchar2(255) not null, access_permission varchar2(255) ); \
+create.SourceType.table = create table dash_sourcetype \
+( id number not null primary key, identifier varchar2(255) not null, access_permission varchar2(255) ); \
 create sequence dash_sourcetype_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_source_idx on dash_sourcetype (identifier)
 
@@ -47,29 +62,34 @@ exists.CalendarItem.by.id = select * from dash_calendar_item where id=?
 
 exists.CalendarItem.by.entityReference = select * from dash_calendar_item where entity_ref=?
 
-insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, entity_type, context_id) values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?)
+insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, entity_type, context_id) \
+values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?)
 
 insert.CalendarLink = insert into dash_calendar_link (id, person_id, item_id, context_id, hidden, sticky) \
 values (dash_calendar_link_seq.nextval, ?, ?, ?, ?, ?)
 
 insert.Context = insert into dash_context (id, context_id, context_url, context_title) values (dash_context_seq.nextval, ?, ?, ?)
 
-insert.NewsItem = insert into dash_news_item (id, news_time, title , access_url, entity_ref, entity_type, context_id) values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?)
+insert.NewsItem = insert into dash_news_item (id, news_time, title , access_url, entity_ref, entity_type, context_id) \
+values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?)
 
-insert.NewsLink = insert into dash_news_link (id, person_id, item_id, context_id, hidden, sticky ) values (dash_news_link_seq.nextval, ?, ?, ?, ?, ?)
+insert.NewsLink = insert into dash_news_link (id, person_id, item_id, context_id, hidden, sticky ) \
+values (dash_news_link_seq.nextval, ?, ?, ?, ?, ?)
 
 insert.Person = insert into dash_person (id,user_id,sakai_id) values (dash_person_seq.nextval, ?, ?)
 
 insert.SourceType = insert into dash_sourcetype ( id, identifier, access_permission) values (dash_sourcetype_seq.nextval, ?, ?)
 
-select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
-ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
+ci.title as ci_title, ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, \
+st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
 join dash_sourcetype st on st.id=ci.entity_type where ci.entity_ref=?
 
-select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
-ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
+ci.title as ci_title, ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, 
+st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
 join dash_sourcetype st on st.id=ci.entity_type where ci.id=?
