--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -60,6 +60,10 @@
 			<groupId>org.sakaiproject.kernel</groupId>
   			<artifactId>sakai-kernel-util</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>org.sakaiproject.entitybroker</groupId>
+            <artifactId>entitybroker-api</artifactId>
+        </dependency>
 		
   	</dependencies>
   	
