cleanup the page navigation
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312854 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/MyApplication.properties
+++ b/tool/src/java/org/sakaiproject/dash/tool/MyApplication.properties
@@ -3,16 +3,8 @@
 
 page.title = Dashboard
 
-link.first = Dash
-link.first.tooltip = Go to the dashboard page
+link.dashboard = Dash
+link.dashboard.tooltip = Go to the dashboard page
 
-link.second = Options
-link.second.tooltip = This is another page
-
-# An example of parameter substitution
-link.third = Page Number {0}
-link.third.tooltip = Yet another page
-
-the.time = Today is {0} and the time is currently {1}
-
-goto.page.three = Go to page three
+link.options = Options
+link.options.tooltip = This is another page
