--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -60,11 +60,26 @@
 			<groupId>org.sakaiproject.kernel</groupId>
   			<artifactId>sakai-kernel-util</artifactId>
 		</dependency>
+
 		<dependency>
             <groupId>org.sakaiproject.entitybroker</groupId>
             <artifactId>entitybroker-api</artifactId>
         </dependency>
 		
+        <!-- testing dependencies -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-mock</artifactId>
+            <version>2.0.8</version>
+            <scope>test</scope>
+        </dependency>
+
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+
   	</dependencies>
   	
 	<build>
@@ -76,6 +91,35 @@
                 </includes>
             </resource>
         </resources>
+        
+	    <!-- unit testing -->
+	    <plugins>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-surefire-plugin</artifactId>
+	            <!-- 
+	                By default, the surefire plugin will automatically include all test classes with the following wildcard patterns:
+	                "**/Test*.java" - includes all of its subdirectory and all java filenames that start with "Test".
+	                "**/*Test.java" - includes all of its subdirectory and all java filenames that end with "Test".
+	                "**/*TestCase.java" - includes all of its subdirectory and all java filenames that end with "TestCase".
+	            -->
+	        </plugin>
+	    </plugins>
+	    <testResources>
+	        <testResource>
+	            <directory>${basedir}/../pack/src/webapp/WEB-INF</directory>
+	            <includes>
+	                <include>components.xml</include>
+	            </includes>
+	        </testResource>
+	        <testResource>
+	            <directory>${basedir}/src/test</directory>
+	            <includes>
+	                <include>test.xml</include>
+	                <!-- <include>hibernate.properties</include> -->
+	            </includes>
+	        </testResource>
+	    </testResources>
 	</build>
 	
 </project>
