--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -76,10 +76,18 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>1.8.0.7</version>
+            <scope>test</scope>
+        </dependency>
+
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.2.2</version>
+			<scope>test</scope>
 		</dependency>
 
   	</dependencies>
