DASH-42 Added resource bundle to get strings from.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312885 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
       			<scope>runtime</scope>
     		</dependency>
 			
+                <dependency>
+                        <groupId>org.sakaiproject.dash</groupId>
+                        <artifactId>dashboard-bundles</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                        <scope>runtime</scope>
+                </dependency>
+
 			<!-- third party dependencies -->
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
@@ -172,6 +179,7 @@
 	
 	
   <modules>
+    <module>bundles</module>
     <module>tool</module>
     <module>api</module>
     <module>impl</module>
