--- a/pack/pom.xml
+++ b/pack/pom.xml
@@ -22,7 +22,12 @@
         <!-- internal dependencies -->
         <dependency>
             <groupId>org.sakaiproject.dash</groupId>
-		<artifactId>dashboard-impl</artifactId>
+			<artifactId>dashboard-impl</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.sakaiproject.dash</groupId>
+			<artifactId>dashboard-bundles</artifactId>
         </dependency>
 
     </dependencies>
