DASH-42 Added more attributes for various entities.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312887 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -4,8 +4,9 @@ announcement.user.name = Posted by:
 announcement.info.link = More info.
 
 assignment.attachments = Attachments:
-assignment.calendar.time = Due Date: 
+assignment.calendar.time = Due date: 
 assignment.user.name = Posted by:
+assignment.news.time = Date posted: 
 assignment.info.link = More info.
 
 resource.info.link = Download this resource.
