DASH-42 Added {0} to some strings to signal a replacement. Added menu items for for keeping items in the dashboard and blocking specific kinds of items from a context. Fixed possible null-pointer.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312890 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -1,12 +1,12 @@
-announcement.attachments = Attachments:
-announcement.news.time = Date posted: 
-announcement.user.name = Posted by:
+announcement.attachments = Attachments: {0}
+announcement.news.time = Date posted: {0}
+announcement.user.name = Posted by: {0}
 announcement.info.link = More info.
 
-assignment.attachments = Attachments:
-assignment.calendar.time = Due date: 
-assignment.user.name = Posted by:
-assignment.news.time = Date posted: 
+assignment.attachments = Attachments: {0}
+assignment.calendar.time = Due date: {0}
+assignment.user.name = Posted by: {0}
+assignment.news.time = Date posted: {0}
 assignment.info.link = More info.
 
 resource.info.link = Download this resource.
