--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -8,7 +8,7 @@
       <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <name>dashboard-bundles</name>
+    <name>dashboard - Bundles</name>
     <groupId>org.sakaiproject.dash</groupId>
     <artifactId>dashboard-bundles</artifactId>
     <organization>
