DASH-42 Added strings for resources.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312891 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -9,6 +9,8 @@ assignment.user.name = Posted by: {0}
 assignment.news.time = Date posted: {0}
 assignment.info.link = More info.
 
+resource.user.name = Posted by: {0}
+resource.news.time = Date posted: {0}
 resource.info.link = Download this resource.
 
 
