modification to AssignmentEntityType
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312901 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -5,9 +5,15 @@ announcement.info.link = More info.
 
 assignment.attachments = Attachments: {0}
 assignment.calendar.time = Due date: {0}
-assignment.user.name = Posted by: {0}
-assignment.news.time = Date posted: {0}
+assignment.user.name = Created by: {0}
+assignment.news.time = Date created: {0}
+assignment.open.time = Open: {0}
+assignment.due.time = Due: {0}
+assignment.close.time = Accept Until: {0}
 assignment.info.link = More info.
+assignment.grade.type = Grade: {0} 
+assignment.max.grade = max ({0})
+assignment.submission.status = Status: {0}
 
 resource.user.name = Posted by: {0}
 resource.news.time = Date posted: {0}
